--- a/app/assets/styles/modules/_item-box.css
+++ b/app/assets/styles/modules/_item-box.css
@@ -6,14 +6,11 @@
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
-	margin-bottom: $spaceDbl;
-	
 
 	@mixin atSmall {
 		flex-direction: row;
 		flex-wrap: nowrap;
 		justify-content: space-around;
-		margin-bottom: 0;
 	}
 
 	@mixin atMedium {
